--- a/0.1/Dockerfile
+++ b/0.1/Dockerfile
@@ -1,77 +1,24 @@
-# Build stage for BerkeleyDB
-FROM alpine:3.3 as berkeleydb
-
-RUN apk --no-cache add autoconf
-RUN apk --no-cache add automake
-RUN apk --no-cache add build-base
-RUN apk --no-cache add openssl
-
-ENV BERKELEYDB_VERSION=db-4.8.30.NC
-ENV BERKELEYDB_PREFIX=/opt/berkleydb
-
-RUN wget -q https://download.oracle.com/berkeley-db/${BERKELEYDB_VERSION}.tar.gz
-RUN tar -xzf *.tar.gz
-RUN sed s/__atomic_compare_exchange/__atomic_compare_exchange_db/g -i ${BERKELEYDB_VERSION}/dbinc/atomic.h
-RUN mkdir -p ${BERKELEYDB_PREFIX}
-
-WORKDIR /${BERKELEYDB_VERSION}/build_unix
-
-RUN ../dist/configure --enable-cxx --disable-shared --with-pic --prefix=${BERKELEYDB_PREFIX}
-RUN make -j4
-RUN make install
-RUN rm -rf ${BERKELEYDB_PREFIX}/docs
-
 # Build stage for primecoind
-FROM alpine:3.3 as primecoin-build
+FROM ubuntu:20.04 as primecoin-build
+RUN apt update && apt install -y wget
 
-COPY --from=berkeleydb /opt/ /opt/
-
-RUN apk --no-cache add autoconf \
-    automake \
-    boost-dev \
-    build-base \
-    chrpath \
-    file \
-    libevent-dev \
-    openssl \
-    openssl-dev \
-    libtool \
-    linux-headers \
-    zeromq-dev \
-    protobuf-dev
-
-ENV PEERCOIN_VERSION=0.9.0ppc \
-    PEERCOIN_SHA=95f4d50706f0eb2c14e3f3b149cbb3e7bfbc71ea33ef3e778dc9a477841a35b5 \
+ENV PRIMECOIN_VERSION=0.1.4 \
+    PRIMECOIN_SHA=69239cbd7c39d9d08be8a304a488e856ceee592af9f41f882cfd9abebf448873 \
     PRIMECOIN_PREFIX=/opt/primecoin
 
-RUN apk --no-cache add git
-RUN git clone https://github.com/primecoin/primecoin
-RUN cd primecoin && git checkout tags/v0.1.4xpm
+RUN wget -q -O primecoind https://github.com/primecoin/primecoin/releases/download/v${PRIMECOIN_VERSION}xpm/primecoind-${PRIMECOIN_VERSION}-linux \
+    && echo "${PRIMECOIN_SHA}  primecoind" | sha256sum -c -
+
 RUN mkdir -p ${PRIMECOIN_PREFIX}/bin
-
-WORKDIR /primecoin/src
-
-# ./configure can't find berkley db unless we do this
-RUN ln -s /opt/berkleydb /usr/include/db4.8 \
-    && ln -s /opt/berkleydb/include/* /usr/include  \
-    && ln -s /opt/berkleydb/lib/* /usr/lib
-
-RUN make primecoind -f makefile.unix upnp=
-RUN cp ./primecoind ${PRIMECOIN_PREFIX}/bin/primecoind
-RUN strip ${PRIMECOIN_PREFIX}/bin/primecoind
+RUN cp ./primecoind ${PRIMECOIN_PREFIX}/bin/
+RUN chmod ugo+rx ${PRIMECOIN_PREFIX}/bin/primecoind
 
 # Build stage for compiled artifacts
-FROM alpine:3.3
+FROM ubuntu:20.04
 
-RUN adduser -S primecoin && \
-  apk --no-cache add \
-    boost \
-    boost-program_options \
-    libevent \
-    openssl \
-    libzmq \
-    su-exec \
-    bash
+RUN adduser --system primecoin && \
+  apt update && \
+  apt install -y gosu
 
 ENV XPM_DATA=/data
 ENV PRIMECOIN_PREFIX=/opt/primecoin
