--- a/0.3/docker-compose.yml
+++ b/0.3/docker-compose.yml
@@ -5,17 +5,13 @@ services:
     restart: always
     image: primecoind:next
     environment:
-      - RPC_USER=primecoind
-      - RPC_PASSWORD=primecoindrpc
     volumes:
       - type: bind
-        source: /opt/primecoin/
+        source: /opt/v-systems/
         target: /data
     command:
-      -txindex
-      -rpcallowip=0/0.0.0.0
     ports:
-      - '9911:9911'
-      - '9912:9912'
-      - '9913:9913'
-      - '9914:9914'
+      - '9921:9921'
+      - '9922:9922'
+      - '9923:9923'
+      - '9924:9924'
