V Systems 0.3 official release binary dockerfile

--- a/0.3/v-systems.conf
+++ b/0.3/v-systems.conf
@@ -219,7 +219,7 @@ vsys {
     port = 9922
 
     # Hash of API key string
-    api-key-hash = "H6nsiifwYKYEx6YzYD7woP1XCn72RVvx6tC1zjjLXqsu"
+    api-key-hash = "noApiKey"
 
     # Enable/disable CORS support
     cors = yes
