--- a/dev/Dockerfile
+++ b/dev/Dockerfile
@@ -10,12 +10,15 @@ RUN git clone https://github.com/virtualeconomy/v-systems
 WORKDIR /v-systems
 ARG commit=master
 RUN git checkout ${commit} && echo `git status`
+ARG txtype=false
+RUN if [ "$txtype" = "true" ]; then sed -i 's/tx-type-account-tx-ids = off/tx-type-account-tx-ids = on/g' src/main/resources/application.conf; fi
+RUN cat src/main/resources/application.conf | grep tx-type-account-tx-ids
 RUN sbt packageAll
 
-ENV V_SYSTEMS_VERSION=0.3.2
+ARG version=0.3.2
 ENV V_SYSTEMS_PREFIX=/opt/v-systems
 RUN mkdir -p ${V_SYSTEMS_PREFIX}/bin
-RUN cp target/vsys-all-${V_SYSTEMS_VERSION}.jar ${V_SYSTEMS_PREFIX}/bin/v-systems.jar
+RUN cp target/vsys-all-${version}.jar ${V_SYSTEMS_PREFIX}/bin/v-systems.jar
 RUN chmod ugo+rx ${V_SYSTEMS_PREFIX}/bin/
 
 # Build stage for compiled artifacts
@@ -33,6 +36,10 @@ ENV PATH=${V_SYSTEMS_PREFIX}/bin:$PATH
 COPY --from=v-systems-build /opt /opt
 COPY docker-entrypoint.sh /entrypoint.sh
 COPY v-systems.conf /v-systems.conf
+ARG txtype=false
+RUN if [ "$txtype" = "true" ]; then sed -i 's/tx-type-account-tx-ids = off/tx-type-account-tx-ids = on/g' /v-systems.conf && sed -i 's/address-transaction-count = off/address-transaction-count = on/g' /v-systems.conf && sed -i 's/address-transaction-list = off/address-transaction-list = on/g' /v-systems.conf; fi
+RUN cat /v-systems.conf | grep tx-type-account-tx-ids
+RUN cat /v-systems.conf | grep address-transaction-
 
 VOLUME ["${V_SYSTEMS_DATA}"]
 
