Update seed node configuration for testnet

--- a/0.3/v-systems.conf
+++ b/0.3/v-systems.conf
@@ -49,7 +49,10 @@ vsys {
         "gemmer.vos.systems:9921",
         "vnode.vos.systems:9921",
 
-        "marble.vos.systems:9923",
+        "gemmer.vcoin.systems:9923",
+        "vnode.vcoin.systems:9923",
+        "gemmer.vos.systems:9923",
+        "vnode.vos.systems:9923",
     ]
 
     # How long the information about peer stays in database after the last communication with it
