--- a/dev/v-systems.conf
+++ b/dev/v-systems.conf
@@ -43,7 +43,17 @@ vsys {
     # nonce = 0
 
     # List of IP addresses of well known nodes.
-    known-peers = ["gemmer.vcoin.systems:9921","vnode.vcoin.systems:9921","gemmer.vos.systems:9921","vnode.vos.systems:9921"]
+    known-peers = [
+        "gemmer.vcoin.systems:9921",
+        "vnode.vcoin.systems:9921",
+        "gemmer.vos.systems:9921",
+        "vnode.vos.systems:9921",
+
+        "gemmer.vcoin.systems:9923",
+        "vnode.vcoin.systems:9923",
+        "gemmer.vos.systems:9923",
+        "vnode.vos.systems:9923",
+    ]
 
     # How long the information about peer stays in database after the last communication with it
     peers-data-residence-time = 1d
